<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/app_name"
        android:cropToPadding="false"
        app:srcCompat="@drawable/wildflowers" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="cursive"
        android:padding="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        android:visibility="visible"
        tools:text="@string/Always" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/Text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:padding="2dp"
                android:text="@string/Caption"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Text3"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:fontFamily="cursive"
                android:padding="4dp"
                android:text="@string/Description"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                tools:text="@string/Description" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:fontFamily="cursive"
                android:padding="4dp"
                android:text="@string/Location"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:typeface="monospace"
                tools:text="@string/Location" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:fontFamily="cursive"
                android:padding="4dp"
                android:text="@string/hours"
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                tools:text="@string/hours" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center">

            <EditText
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Hint"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:textColor="@android:color/holo_green_dark" />

        </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>